src/test/deca/syntax/invalid/homemade/test/test_pars_inv_type_vide.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le type
//
// Resultats:
//    Ligne 12 : Erreur (type a le nom d'un mot reservé)
//    
//
// Historique:
//    cree le 04/01/2023

{
   x = 1;
}